--- a/Backend/Rest Project /views/new.ejs
+++ b/Backend/Rest Project /views/new.ejs
@@ -9,7 +9,7 @@
 <body>
     <form method="post" action="/posts">
         <input type="text" placeholder="Username" name="username"><br><br>
-        <textarea placeholder="write your contant" name="contant"></textarea><br><br>
+        <textarea placeholder="write your contant" name="content"></textarea><br><br>
         <button>Submit Post</button>
     </form>
 </body>
