--- a/Backend/Rest Project /views/edit.ejs
+++ b/Backend/Rest Project /views/edit.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit Post</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <h1> You can now edit</h1>
@@ -13,7 +14,7 @@
     <br>
     <br>
     <form method="POST" action="/posts/<%= post.id %>?_method=PATCH">
-        <textarea rows="10" cols="20" name="content"><%= post.content %></textarea>
+        <textarea rows="10" cols="35" name="content"><%= post.content %></textarea>
         <br>
         <button>Edit</button>
     </form>
