--- a/Major Project /views/listings/new.ejs
+++ b/Major Project /views/listings/new.ejs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add</title>
-</head>
+<% layout("/layouts/boilerplate") %>
 <body>
     <h3>Add New Hotel</h3>
     <form method="POST" action="/listings">
@@ -27,4 +20,3 @@
         
     </form>
 </body>
-</html>
