--- a/Major Project /views/listings/show.ejs
+++ b/Major Project /views/listings/show.ejs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Show Listing</title>
-</head>
+<% layout("/layouts/boilerplate") %>
 <body>
     <h3>Listing Detail</h1>
         <ul>
@@ -25,4 +18,3 @@
             </form>
         </ul>
 </body>
-</html>
