--- a/Major Project /views/listings/home.ejs
+++ b/Major Project /views/listings/home.ejs
@@ -1,20 +1,34 @@
 <% layout("/layouts/boilerplate") %>
 <body>
-    <h1>All Detail for hotel</h1>
+    <h3>All Details for hotel</h3>
+    <br>
     <!-- <form method="get" action="/listings/new" >
     <button>Add new</button> -->
-    <% for (listing of allListings){%>
-    <div class="card" style="width: 18rem;">
-        <img src="<%= listing.image %>" class="card-img-top" alt="listing-image">
-        <div class="card-body">
-          <p class="card-text">
-            <%=listing.title%>
-            <br>
-            &#8377;<%= listing.price.toLocaleString("en-In") %>
-            </p>
-        </div>
-      </div>
-      <%}%>
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+        <% for (listing of allListings){%>
+            <a href="/listings/<%= listing.id %>" class="c-links">
+                <div class="card col">
+                    <img src="<%= listing.image %>" class="card-img-top" alt="listing-image" style="height: 20rem">
+                    <div class="card-img-overlay">
+                        
+                    </div>
+                    <div class="card-body">
+                      <p class="card-text">
+                        <b>
+                            <%=listing.title%>
+                        </b>
+                        
+                        <br>
+                        &#8377;<%= listing.price.toLocaleString("en-In") %>
+                        </p>
+                    </div>
+                  </div>
+
+            </a>
+            
+              <%}%>
+    </div>
+  
    
 </body>
 
