--- a/Major Project /views/listings/new.ejs
+++ b/Major Project /views/listings/new.ejs
@@ -8,28 +8,28 @@
 
     <form method="POST" action="/listings">
         <div class="mb-3">
-            <label for="title" class="form-label">Title</label>
+            <label for="title" class="form-label"><b>Title</b></label>
             <input name="listing[title]" placeholder="Enter title" type="text" class="form-control">
         </div>
 
         <div class="mb-3">
-            <label for="description" class="form-label">Description</label>
+            <label for="description" class="form-label"><b>Description</b></label>
             <textarea name="listing[description]" placeholder="Enter description" rows="5" cols="30" type="text" class="form-control"></textarea>
         </div>
 
         <div class="mb-3">
-            <label for="image" class="form-label">Image</label>
+            <label for="image" class="form-label"><b>Image</b></label>
             <input name="listing[image]" placeholder="Enter Image URL/Link" type="tex"class="form-control">
         </div>
 
         <div class="row">
             <div class="mb-3 col-md-4">
-                <label for="price" class="form-label">Price</label>
+                <label for="price" class="form-label"><b>Price</b></label>
                 <input name="listing[price]" placeholder="Enter price" type="number" class="form-control">
             </div>
 
             <div class="mb-3 col-md-8">
-                <label for="country" class="form-label">Country</label>
+                <label for="country" class="form-label"><b>Country</b></label>
                 <input name="listing[country]" placeholder="Enter country" type="text" class="form-control">
             </div>
 
@@ -38,13 +38,13 @@
         
 
         <div class="mb-3">
-            <label for="title" class="form-label">Location</label>
+            <label for="title" class="form-label"><b>Location</b></label>
             <input name="listing[location]" placeholder="Enter location" type="text" class="form-control">
         </div>
 
         
       <br><br>
-        <button class="btn btn-dark">Add</button>
+        <button class="btn btn-dark btn-add">Add</button>
         
     </form>
 </div>
