--- a/Major Project /views/listings/edit.ejs
+++ b/Major Project /views/listings/edit.ejs
@@ -56,7 +56,7 @@
         </div>
        
     
-        <button class="btn btn-dark mt-2 btn-edit">Edit</button>
+        <button class="btn btn-dark mt-2 btn-edit mb-5">Edit</button>
     </form>
     </div>
 </div>
