--- a/Major Project /views/listings/show.ejs
+++ b/Major Project /views/listings/show.ejs
@@ -2,16 +2,14 @@
 <body>
     <div class="row mt-3">
         <div class="col-8 offset-3">
-            <h3>Listing Detail</h1>
+            <h3> <%= listing.title %></h1>
         </div>
         <div class="card col-6 offset-3 mt-3">
             <img src="<%= listing.image %>" class="card-img-top show-card" alt="Listing-image ">
         
           <div class="card-body">
             <p class="card-text mt-2">
-                <b>
-                    <%= listing.title %>
-                </b><br>
+              
                 <%= listing.description %><br>
                 &#8377;<%= listing.price.toLocaleString("en-In") %><br>
                 <%= listing.location %><br>
@@ -25,10 +23,30 @@
             </form>
             <br>
             <form method="POST" action="/listings/<%= listing.id %>?_method=DELETE">
-                <button class="btn btn-dark offset-5">Delete</button>
+                <button class="btn btn-dark offset-5 mb-5">Delete</button>
             </form>
         </ul>
           </div>
+
+          <!-- Review -->
+          <hr>
+
+          <div class="col-8 offset-3 mb-3 mt-3">
+            <h4>Leave a Review</h4>
+            <form>
+            <div>
+              <label for="rating" class="form-label">Rating</label>
+              <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
+            </form>
+          </div>
+
+          <div class="mb-3">
+            <label for="comment" class="form-label">Comments</label>
+            <textarea  id="comment" name="review" cols="30" rows="5"  class="form-control" ></textarea>
+          </div>
+          <button class="btn btn-outline-dark">Submit</button>
+        </div>
+          
                     
     
             </div>
