--- a/Major Project /views/listings/new.ejs
+++ b/Major Project /views/listings/new.ejs
@@ -32,8 +32,8 @@
 
         <div class="row">
             <div class="mb-3 col-md-4">
-                <label for="price" class="form-label"><b>Price</b></label>
-                <input name="listing[price]" placeholder="Enter price"  class="form-control" required>
+                <label for="price" class="form-label"><b>Price in INR</b></label>
+                <input name="listing[price]" placeholder="Enter price"  class="form-control" required type="number">
                 <div class="invalid-feedback">
                     Price should be valid!
                   </div>
