--- a/Major Project /views/listings/show.ejs
+++ b/Major Project /views/listings/show.ejs
@@ -4,7 +4,7 @@
         <div class="col-8 offset-3">
             <h3> <%= listing.title %></h1>
         </div>
-        <div class="card col-6 offset-3 mt-3">
+        <div class="card col-6 offset-3 mt-3 listing-card">
             <img src="<%= listing.image %>" class="card-img-top show-card" alt="Listing-image ">
         
           <div class="card-body">
@@ -33,7 +33,7 @@
 
           <div class="col-8 offset-3 mb-3 mt-3">
             <h4>Leave a Review</h4>
-            <form method="post" action="/listings/<%= listing.id %>/reviews">
+            <form method="post" action="/listings/<%= listing.id %>/reviews" novalidate class="needs-validation">
             <div>
               <label for="rating" class="form-label">Rating</label>
               <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
@@ -42,13 +42,35 @@
 
           <div class="mb-3">
             <label for="comment" class="form-label">Comments</label>
-            <textarea  id="comment" name="review[comment]" cols="30" rows="5"  class="form-control" ></textarea>
+            <textarea  id="comment" name="review[comment]" cols="30" rows="5"  class="form-control" required ></textarea>
+            <div class="invalid-feedback">
+              Please add some comments
+            </div>
           </div>
+          
           <button class="btn btn-outline-dark">Submit</button>
           </form>
+          <hr>
+       <p><b>All Reviews</b></p>
+       <div class="row">
+
+          <% for(review of listing.reviews){ %>
+        
+            <div class="card col-5 mb-3 ms-2" >
+              <div class="card-body">
+                <h5 class="card-title">Joe Min</h5>
+                <p class="card-text"><%= review.comment%></p>
+                <p class="card-text"><%= review.rating %> Stars
+                </p>
+              </div>
+              <form method="POST" action="/listings/<%= listing.id %>/reviews/<%= review.id %>?_method=DELETE">
+                <button class="btn btn-outline-danger mb-3 ms-2">
+                  Delete
+                </button>
+              </form>
+            </div> 
+          <% } %>
         </div>
-          
-                    
-    
-            </div>
+      </div>
+    </div>
 </body>
