--- a/Major Project /views/listings/home.ejs
+++ b/Major Project /views/listings/home.ejs
@@ -1,5 +1,6 @@
 <% layout("/layouts/boilerplate") %>
 <body>
+    <%= successMsg %>
     <h3>All Details for hotel</h3>
     <br>
     <!-- <form method="get" action="/listings/new" >
