--- a/Major Project /views/error.ejs
+++ b/Major Project /views/error.ejs
@@ -1,9 +1,10 @@
 <% layout("/layouts/boilerplate") %>
 
-  <div class="row">
-    <div class="alert alert-danger d-flex align-items-center col-6 offset-3 mt-3" role="alert">
-        <div>
-          <%= err.message %>
-        </div>
-      </div>
+<div class="row">
+  <div
+    class="alert alert-danger d-flex align-items-center col-6 offset-3 mt-3"
+    role="alert"
+  >
+    <div><%= err.message %></div>
   </div>
+</div>
