--- a/Major Project /views/listings/home.ejs
+++ b/Major Project /views/listings/home.ejs
@@ -1,34 +1,30 @@
 <% layout("/layouts/boilerplate") %>
 <body>
-    <h3>All Details for hotel</h3>
-    <br>
-    <!-- <form method="get" action="/listings/new" >
+  <h3>All Details for hotel</h3>
+  <br />
+  <!-- <form method="get" action="/listings/new" >
     <button>Add new</button> -->
-    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
-        <% for (listing of allListings){%>
-            <a href="/listings/<%= listing.id %>" class="c-links">
-                <div class="card col listing-card">
-                    <img src="<%= listing.image %>" class="card-img-top" alt="listing-image" style="height: 20rem">
-                    <div class="card-img-overlay">
-                        
-                    </div>
-                    <div class="card-body">
-                      <p class="card-text">
-                        <b>
-                            <%= listing.title %>
-                        </b>
-                        <br>
-                        &#8377;
-                        <%= listing.price.toLocaleString("en-In") %>
-                        </p>
-                    </div>
-                  </div>
+  <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+    <% for (listing of allListings){%>
+    <a href="/listings/<%= listing.id %>" class="c-links">
+      <div class="card col listing-card">
+        <img
+          src="<%= listing.image %>"
+          class="card-img-top"
+          alt="listing-image"
+          style="height: 20rem"
+        />
+        <div class="card-img-overlay"></div>
+        <div class="card-body">
+          <p class="card-text">
+            <b> <%= listing.title %> </b>
+            <br />
+            &#8377; <%= listing.price.toLocaleString("en-In") %>
+          </p>
+        </div>
+      </div>
+    </a>
 
-            </a>
-            
-              <%}%>
-    </div>
-  
-   
+    <%}%>
+  </div>
 </body>
-
