--- a/Major Project /views/listings/new.ejs
+++ b/Major Project /views/listings/new.ejs
@@ -1,69 +1,94 @@
 <% layout("/layouts/boilerplate") %>
 <body>
-    <div class="row offset-2">
-        <div class="col-8">
-            <h4 class="h4">Add New Hotel</h4>
-            <br>
+  <div class="row offset-2">
+    <div class="col-8">
+      <h4 class="h4">Add New Hotel</h4>
+      <br />
 
-    <form method="POST" action="/listings" novalidate class="needs-validation">
+      <form
+        method="POST"
+        action="/listings"
+        novalidate
+        class="needs-validation"
+      >
         <div class="mb-3">
-            <label for="title" class="form-label" ><b>Title</b></label>
-            <input name="listing[title]" placeholder="Enter title" type="text" class="form-control" required>
-            <div class="valid-feedback">
-                Looks good!
-              </div>
+          <label for="title" class="form-label"><b>Title</b></label>
+          <input
+            name="listing[title]"
+            placeholder="Enter title"
+            type="text"
+            class="form-control"
+            required
+          />
+          <div class="valid-feedback">Looks good!</div>
         </div>
 
         <div class="mb-3">
-            <label for="description" class="form-label"><b>Description</b></label>
-            <textarea name="listing[description]" placeholder="Enter description" rows="5" cols="30" type="text" class="form-control" required></textarea>
-            <div class="invalid-feedback">
-                Description should be short
-              </div>
+          <label for="description" class="form-label"><b>Description</b></label>
+          <textarea
+            name="listing[description]"
+            placeholder="Enter description"
+            rows="5"
+            cols="30"
+            type="text"
+            class="form-control"
+            required
+          ></textarea>
+          <div class="invalid-feedback">Description should be short</div>
         </div>
 
         <div class="mb-3">
-            <label for="image" class="form-label"><b>Image</b></label>
-            <input name="listing[image]" placeholder="Enter Image URL/Link" type="tex"class="form-control" >
-            <div class="invalid-feedback">
-                Description should be short
-              </div>
+          <label for="image" class="form-label"><b>Image</b></label>
+          <input
+            name="listing[image]"
+            placeholder="Enter Image URL/Link"
+            type="tex"
+            class="form-control"
+          />
+          <div class="invalid-feedback">Description should be short</div>
         </div>
 
         <div class="row">
-            <div class="mb-3 col-md-4">
-                <label for="price" class="form-label"><b>Price in INR</b></label>
-                <input name="listing[price]" placeholder="Enter price"  class="form-control" required type="number">
-                <div class="invalid-feedback">
-                    Price should be valid!
-                  </div>
-            </div>
+          <div class="mb-3 col-md-4">
+            <label for="price" class="form-label"><b>Price in INR</b></label>
+            <input
+              name="listing[price]"
+              placeholder="Enter price"
+              class="form-control"
+              required
+              type="number"
+            />
+            <div class="invalid-feedback">Price should be valid!</div>
+          </div>
 
-            <div class="mb-3 col-md-8">
-                <label for="country" class="form-label"><b>Country</b></label>
-                <input name="listing[country]" placeholder="Enter country" type="text" class="form-control" required>
-                <div class="invalid-feedback">
-                    country should be valid!
-                  </div>
-            </div>
-
+          <div class="mb-3 col-md-8">
+            <label for="country" class="form-label"><b>Country</b></label>
+            <input
+              name="listing[country]"
+              placeholder="Enter country"
+              type="text"
+              class="form-control"
+              required
+            />
+            <div class="invalid-feedback">country should be valid!</div>
+          </div>
         </div>
 
-        
-
-        <div >
-            <label for="title" class="form-label"><b>Location</b></label>
-            <input name="listing[location]" placeholder="Enter location" type="text" class="form-control" required>
-            <div class="invalid-feedback">
-                location should be valid!
-              </div>
+        <div>
+          <label for="title" class="form-label"><b>Location</b></label>
+          <input
+            name="listing[location]"
+            placeholder="Enter location"
+            type="text"
+            class="form-control"
+            required
+          />
+          <div class="invalid-feedback">location should be valid!</div>
         </div>
 
-        
-      <br><br>
+        <br /><br />
         <button class="btn btn-dark btn-add mb-5">Add</button>
-        
-    </form>
-</div>
-</div>
+      </form>
+    </div>
+  </div>
 </body>
