--- a/Major Project /views/listings/show.ejs
+++ b/Major Project /views/listings/show.ejs
@@ -8,15 +8,16 @@
             <img src="<%= listing.image %>" class="card-img-top show-card" alt="Listing-image ">
         
           <div class="card-body">
-            <p class="card-text mt-2">
-              
-                <%= listing.description %><br>
-                &#8377;<%= listing.price.toLocaleString("en-In") %><br>
-                <%= listing.location %><br>
-                <%= listing.country %><br>
-            </p>
+            
+              <p class="card-text mt-2">Owned By <%= listing.owner.username %></p>
+              <p class="card-text mt-2"> <%= listing.description %></p>
+              <p class="card-text mt-2">&#8377;<%= listing.price.toLocaleString("en-In") %></p>
+              <p class="card-text mt-2"><%= listing.location %></p>
+              <p class="card-text mt-2"><%= listing.country %></p>
+          
             </div>
           </div>
+          <% if(currUser && currUser._id.equals(listing.owner._id) ) {%>
           <div class="btns offset-3">
             <form method="GET" action="/listings/<%= listing.id %>/edit">
                 <button class="btn btn-dark btn-edit offset-3">Edit</button>
@@ -27,6 +28,7 @@
             </form>
         </ul>
           </div>
+          <% } %>
 
           <!-- Review -->
           <hr>
