--- a/Major Project /views/listings/edit.ejs
+++ b/Major Project /views/listings/edit.ejs
@@ -76,11 +76,10 @@
         <div class="mb-3">
           <label for="title" class="form-label"><b>Location</b></label>
           <input
-            name="listing[loacation]"
-            value="<%= listing.location %>"
+            name="listing[location]"
+            value="<%= listing.location%>"
             type="text"
             class="form-control"
-            required
           />
           <div class="invalid-feedback">location should be valid!</div>
         </div>
