--- a/Major Project /views/listings/home.ejs
+++ b/Major Project /views/listings/home.ejs
@@ -9,7 +9,7 @@
     <a href="/listings/<%= listing.id %>" class="c-links">
       <div class="card col listing-card">
         <img
-          src="<%= listing.image %>"
+          src="<%= listing.image.url %>"
           class="card-img-top"
           alt="listing-image"
           style="height: 20rem"
