--- a/Major Project /views/listings/show.ejs
+++ b/Major Project /views/listings/show.ejs
@@ -5,7 +5,7 @@
             <h3> <%= listing.title %></h1>
         </div>
         <div class="card col-6 offset-3 mt-3 listing-card">
-            <img src="<%= listing.image %>" class="card-img-top show-card" alt="Listing-image ">
+            <img src="<%= listing.image.url %>" class="card-img-top show-card" alt="Listing-image ">
         
           <div class="card-body">
             
