--- a/Major Project /views/error.ejs
+++ b/Major Project /views/error.ejs
@@ -1,5 +1,5 @@
 <% layout("/layouts/boilerplate") %>
-
+<!-- error flash -->
 <div class="row">
   <div
     class="alert alert-danger d-flex align-items-center col-6 offset-3 mt-3"
