--- a/Major Project /views/listings/new.ejs
+++ b/Major Project /views/listings/new.ejs
@@ -42,6 +42,8 @@
           <label for="image" class="form-label"><b>Upload Image</b></label>
           <input name="listing[image]" type="file" class="form-control" />
           <div class="invalid-feedback">Description should be short</div>
+          required
+          
         </div>
 
         <div class="row">
