--- a/Major Project /views/listings/edit.ejs
+++ b/Major Project /views/listings/edit.ejs
@@ -37,6 +37,11 @@
           >
           <div class="invalid-feedback">Description should be short</div>
         </div>
+        <b>Orignal Image </b>
+        <div class="mb-3">
+          
+            <img class="editImage" src="<%= originalImageUrl %>">
+          </div>
         <div class="mb-3">
           <label for="image" class="form-label"><b>Upload a new Image</b></label>
           <input
