--- a/React/basic-react-app/src/Product.css
+++ b/React/basic-react-app/src/Product.css
@@ -2,5 +2,8 @@
   border: 1px solid black;
   border-radius: 14px;
   margin-bottom: 5px;
-  padding: 0 10px 0 10px;
+  /* padding: 0 10px 0 10px; */
+  margin-left: 15px;
+  height: 157px;
+  width: 220px;
 }
